else, mantık hatası giderildi

--- a/dogal_dil.ipynb
+++ b/dogal_dil.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsqvOurRkmvSvYi/uEplpm",
+      "authorship_tag": "ABX9TyNXABhbRTC/yn8HDVcFN/gD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,7 @@
         "\n",
         "kullanici = input(\"bir cümle giriniz \")\n",
         "liste = kullanici.split(\" \")\n",
+        "print(liste)\n",
         "\n",
         "\n",
         "def kontrol(txt,dil):\n",
@@ -49,13 +50,14 @@
         "\n",
         "def siralama():\n",
         "  skorlar = [tr,en,it,fr,sp]\n",
-        "  if tr > en and it and fr and sp:\n",
+        "  print(skorlar)\n",
+        "  if tr > en and tr > it and tr > fr and tr > sp:\n",
         "    print(\"türkçe\")\n",
-        "  elif en > tr and it and fr and sp:\n",
+        "  elif en > tr and en > it and en > fr and en > sp:\n",
         "    print(\"İngilizce\")\n",
-        "  elif it > tr and en and fr and sp:\n",
+        "  elif it > tr and it > en and it > fr and it > sp:\n",
         "    print(\"İtalyanca\")\n",
-        "  elif fr > tr and en and it and sp:\n",
+        "  elif fr > tr and fr > en and fr > it and fr > sp:\n",
         "    print(\"Fransızca\")\n",
         "  else:\n",
         "    print(\"İspanyolca\")\n",
@@ -75,15 +77,17 @@
         },
         "collapsed": true,
         "id": "VRAK2zq-lw8O",
-        "outputId": "7b53b348-fd78-4139-a7e7-679b0682de34"
+        "outputId": "d2d8e326-15ef-46bf-b12a-13f207c44991"
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "bir cümle giriniz ce texte est en espagnol moi\n",
+            "bir cümle giriniz Les œuvres les plus esthétiques du monde sont ici\n",
+            "['Les', 'œuvres', 'les', 'plus', 'esthétiques', 'du', 'monde', 'sont', 'ici']\n",
+            "[0, 3, 0, 6, 3]\n",
             "Fransızca\n"
           ]
         }
