text dosyasında boşluk sorunu ve karakter kodlama sorunu çözüldü

--- a/dogal_dil.ipynb
+++ b/dogal_dil.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXABhbRTC/yn8HDVcFN/gD",
+      "authorship_tag": "ABX9TyOCnZxyEvDWCk7CPvk8FdgY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,17 +30,17 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "kullanici = input(\"bir cümle giriniz \")\n",
-        "liste = kullanici.split(\" \")\n",
+        "kullanici = (input(\"bir cümle giriniz (cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır) \")).lower()\n",
+        "liste = kullanici.split(\" \") # kullanıcıdan gelen cümleyi listeye alıyor\n",
         "print(liste)\n",
         "\n",
         "\n",
-        "def kontrol(txt,dil):\n",
+        "def kontrol(txt,kodlama): #txt = kelimeyi aratacağı text dosyası. kodlama = karakter kodlama seçeneği\n",
         "  skor = 0\n",
         "\n",
-        "  dil = len(liste)\n",
-        "  with open(txt, 'r', encoding='latin-1') as f:\n",
-        "    kelimeler = f.read().splitlines()\n",
+        "  with open(txt, 'r', encoding= kodlama) as f:\n",
+        "    kelimeler = f.read().split()\n",
+        "\n",
         "\n",
         "  for kelime in liste:\n",
         "    if kelime in kelimeler:\n",
@@ -52,7 +52,7 @@
         "  skorlar = [tr,en,it,fr,sp]\n",
         "  print(skorlar)\n",
         "  if tr > en and tr > it and tr > fr and tr > sp:\n",
-        "    print(\"türkçe\")\n",
+        "    print(\"Türkçe\")\n",
         "  elif en > tr and en > it and en > fr and en > sp:\n",
         "    print(\"İngilizce\")\n",
         "  elif it > tr and it > en and it > fr and it > sp:\n",
@@ -63,13 +63,19 @@
         "    print(\"İspanyolca\")\n",
         "\n",
         "\n",
-        "tr =kontrol(\"turkce.txt\" , \"Türkçe\")\n",
-        "en =kontrol(\"english.txt\", \"İngilizce\")\n",
-        "it =kontrol(\"italian.txt\", \"İtalyanca\")\n",
-        "fr =kontrol(\"french.txt\", \"Fransızca\")\n",
-        "sp =kontrol(\"spanish.txt\", \"İspanyolca\")\n",
+        "tr =kontrol(\"turkce.txt\", \"utf-8\")\n",
+        "en =kontrol(\"english.txt\", \"utf-8\")\n",
+        "it =kontrol(\"italian.txt\", \"latin1\")\n",
+        "fr =kontrol(\"french.txt\", \"utf-8\")\n",
+        "sp =kontrol(\"spanish.txt\", \"utf-8\")\n",
         "\n",
-        "siralama()"
+        "siralama()\n",
+        "\n",
+        "#programın zayıf yönleri\n",
+        "# noktalama işaretleri\n",
+        "# ek alan bazı kelimeler\n",
+        "# yazım hataları\n",
+        "# kısa cümlelerde tespit zorluğu"
       ],
       "metadata": {
         "colab": {
@@ -77,18 +83,18 @@
         },
         "collapsed": true,
         "id": "VRAK2zq-lw8O",
-        "outputId": "d2d8e326-15ef-46bf-b12a-13f207c44991"
+        "outputId": "5a977a0c-2d5b-4c74-b155-5a3dfce2022e"
       },
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "bir cümle giriniz Les œuvres les plus esthétiques du monde sont ici\n",
-            "['Les', 'œuvres', 'les', 'plus', 'esthétiques', 'du', 'monde', 'sont', 'ici']\n",
-            "[0, 3, 0, 6, 3]\n",
-            "Fransızca\n"
+            "bir cümle giriniz (cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır) şu an bazı metinleri daha iyi anlıyor olabilmen lazım öyle mi\n",
+            "['şu', 'an', 'bazı', 'metinleri', 'daha', 'iyi', 'anlıyor', 'olabilmen', 'lazım', 'öyle', 'mi']\n",
+            "[8, 1, 1, 2, 1]\n",
+            "Türkçe\n"
           ]
         }
       ]
