--- a/dogal_dil.ipynb
+++ b/dogal_dil.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCnZxyEvDWCk7CPvk8FdgY",
+      "authorship_tag": "ABX9TyO1waf9vZH8Us9SsyKNDhXb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,11 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "kullanici = (input(\"bir cümle giriniz (cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır) \")).lower()\n",
+        "print(\"DİL TAHMİNİ\\n------------\\nSadece belirli dillerde çalışır:\\n\\nTürkçe\\nİngilizce\\nİtalyanca\\nFransızca\\nİspanyolca\\n\")\n",
+        "kullanici = (input(\"bir cümle giriniz (cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır) \\n\")).lower()\n",
+        "print(\"-----------------------------\")\n",
         "liste = kullanici.split(\" \") # kullanıcıdan gelen cümleyi listeye alıyor\n",
-        "print(liste)\n",
+        "#print(liste)\n",
         "\n",
         "\n",
         "def kontrol(txt,kodlama): #txt = kelimeyi aratacağı text dosyası. kodlama = karakter kodlama seçeneği\n",
@@ -50,7 +51,7 @@
         "\n",
         "def siralama():\n",
         "  skorlar = [tr,en,it,fr,sp]\n",
-        "  print(skorlar)\n",
+        "  #print(skorlar)\n",
         "  if tr > en and tr > it and tr > fr and tr > sp:\n",
         "    print(\"Türkçe\")\n",
         "  elif en > tr and en > it and en > fr and en > sp:\n",
@@ -75,7 +76,8 @@
         "# noktalama işaretleri\n",
         "# ek alan bazı kelimeler\n",
         "# yazım hataları\n",
-        "# kısa cümlelerde tespit zorluğu"
+        "# kısa cümlelerde tespit zorluğu\n",
+        "# 5'ten fazla dil için ideal değil, hantal"
       ],
       "metadata": {
         "colab": {
@@ -83,17 +85,27 @@
         },
         "collapsed": true,
         "id": "VRAK2zq-lw8O",
-        "outputId": "5a977a0c-2d5b-4c74-b155-5a3dfce2022e"
+        "outputId": "884ff54f-09c8-4444-a033-bd7cccdbfc5e"
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "bir cümle giriniz (cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır) şu an bazı metinleri daha iyi anlıyor olabilmen lazım öyle mi\n",
-            "['şu', 'an', 'bazı', 'metinleri', 'daha', 'iyi', 'anlıyor', 'olabilmen', 'lazım', 'öyle', 'mi']\n",
-            "[8, 1, 1, 2, 1]\n",
+            "DİL TAHMİNİ\n",
+            "------------\n",
+            "Sadece belirli dillerde çalışır:\n",
+            "\n",
+            "Türkçe\n",
+            "İngilizce\n",
+            "İtalyanca\n",
+            "Fransızca\n",
+            "İspanyolca\n",
+            "\n",
+            "bir cümle giriniz (cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır) \n",
+            "cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır\n",
+            "-----------------------------\n",
             "Türkçe\n"
           ]
         }
