İtalyanca yerine Almanca yazıldı

--- a/dogal_dil.ipynb
+++ b/dogal_dil.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1waf9vZH8Us9SsyKNDhXb",
+      "authorship_tag": "ABX9TyMZiPTWlGL3OUZD72YJlkpM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,15 +50,15 @@
         "\n",
         "\n",
         "def siralama():\n",
-        "  skorlar = [tr,en,it,fr,sp]\n",
+        "  skorlar = [tr,en,de,fr,sp]\n",
         "  #print(skorlar)\n",
-        "  if tr > en and tr > it and tr > fr and tr > sp:\n",
+        "  if tr > en and tr > de and tr > fr and tr > sp:\n",
         "    print(\"Türkçe\")\n",
-        "  elif en > tr and en > it and en > fr and en > sp:\n",
+        "  elif en > tr and en > de and en > fr and en > sp:\n",
         "    print(\"İngilizce\")\n",
-        "  elif it > tr and it > en and it > fr and it > sp:\n",
-        "    print(\"İtalyanca\")\n",
-        "  elif fr > tr and fr > en and fr > it and fr > sp:\n",
+        "  elif de > tr and de > en and de > fr and de > sp:\n",
+        "    print(\"Almanca\")\n",
+        "  elif fr > tr and fr > en and fr > de and fr > sp:\n",
         "    print(\"Fransızca\")\n",
         "  else:\n",
         "    print(\"İspanyolca\")\n",
@@ -66,7 +66,7 @@
         "\n",
         "tr =kontrol(\"turkce.txt\", \"utf-8\")\n",
         "en =kontrol(\"english.txt\", \"utf-8\")\n",
-        "it =kontrol(\"italian.txt\", \"latin1\")\n",
+        "de =kontrol(\"german.txt\", \"utf-8\")\n",
         "fr =kontrol(\"french.txt\", \"utf-8\")\n",
         "sp =kontrol(\"spanish.txt\", \"utf-8\")\n",
         "\n",
@@ -83,11 +83,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "VRAK2zq-lw8O",
-        "outputId": "884ff54f-09c8-4444-a033-bd7cccdbfc5e"
+        "outputId": "268ea811-8baf-4354-be83-b5eb08907934"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,9 +103,9 @@
             "İspanyolca\n",
             "\n",
             "bir cümle giriniz (cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır) \n",
-            "cümledeki kelime sayısı arttıkça doğruluk ihtimali artacaktır\n",
+            "Die ästhetischsten Werke der Welt sind hier\n",
             "-----------------------------\n",
-            "Türkçe\n"
+            "Almanca\n"
           ]
         }
       ]
